--- a/CurrencyMinMaxAvg.API/CurrencyMinMaxAvg.API.csproj
+++ b/CurrencyMinMaxAvg.API/CurrencyMinMaxAvg.API.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
+  </ItemGroup>
+
 </Project>
