Reorganizing solution files

--- a/CurrencyMinMaxAvg.API/CurrencyMinMaxAvg.API.csproj
+++ b/CurrencyMinMaxAvg.API/CurrencyMinMaxAvg.API.csproj
@@ -13,4 +13,8 @@
     <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="CurrencyMinMaxAvg.sln" />
+  </ItemGroup>
+
 </Project>
